Conclusion shortened, so it fills on 7 pages

--- a/paper.tex
+++ b/paper.tex
@@ -364,7 +364,7 @@ Both implemented methods show similar speed, while the contentdata mode is sligh
 
 In this article, we have introduced the readers to the structure and functioning of Ext2, Ext3 and Ext4 filesystems. For Ext4, we have presented a novel approach of data recovery, which is able to restore data even in case of a corrupted superblock \cite{afeic}. The solution was proved to be successful in many situations and was adapted for Sleuthkit framework.
 
-In future work, the authors want to add backward compatibility, so even Ext4 filesystems upgraded from Ext3 would be also supported. This is not possible now, as only extents are considered, not (in)direct pointers, which initially remain in a converted Ext4 filesystem.
+%In future work, the authors want to add backward compatibility, so even Ext4 filesystems upgraded from Ext3 would be also supported. This is not possible now, as only extents are considered, not (in)direct pointers, which initially remain in a converted Ext4 filesystem.
 
 \bibliographystyle{abbrv}
 \bibliography{paper}
