--- a/paper.tex
+++ b/paper.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\title{Advanced forensic Ext4 inode carving}
+\title{Advanced forensic Ext4 inode carving: summary}
 
 \numberofauthors{3} 
 \author{
@@ -28,7 +28,7 @@
 
 \maketitle
 \begin{abstract}
-Many widely-used filesystems (NTFS, FAT, Ext3) are well-researched in terms of digital forensics and data recovery, but this does not apply to Ext4, a successor in the family of Ext filesystems. Due to some new functionalities of Ext4 and compatibility breaking, a novel approach for file carving had to developed. The advantages of this approach include its ability to restore files even in the case of a corrupted superblock. This article gives a summary of the original paper and its outcomes, also with an introduction to Ext4 filesystem and Ext family included.
+Many widely-used filesystems (NTFS, FAT, Ext3) are well-researched in terms of digital forensics and data recovery, but this does not apply to Ext4, a successor in the family of Ext filesystems. Due to some new functionalities of Ext4 and compatibility breaking, a novel approach for file carving had to be developed. The advantages of this approach include its ability to restore files even in the case of a corrupted superblock. This article gives a summary of the original paper and its outcomes, also with an introduction to Ext4 filesystem and Ext family included.
 \end{abstract}
 
 \section{Introduction}
@@ -37,7 +37,7 @@ In the present, Ext4 is a widely-used filesystem, especially on Linux-based oper
 
 This article provides a summary of the paper \cite{afeic}. But since the method is not easily understandable without wider information about Ext4 way of working, we include here a description of the filesystem. Furthermore, a description of Ext2 and Ext3 must be also attached, as Ext4 is closely tied to them and succeeds their functions.
 
-Our work is organized in a following way: Section 1 is this introduction; Section 2 provides the description of the filesystems; Section 3 is the summary of the paper; in Section 4 results of the evaluation are described; and Section 5 is the conclusion.
+Our work is organized in the following way: Section 1 is this introduction; Section 2 provides the description of the filesystems; Section 3 is the summary of the paper; in Section 4 results of the evaluation are described; and Section 5 is the conclusion.
 
 \section{Introduction to Ext filesystem family}
 
@@ -52,7 +52,7 @@ As the other Unix filesystems, it also uses inodes for storing file metadata. An
 
 A directory is only a special kind of file, with a list of files and their corresponding inodes. A link can be either hard or symbolic. A hard link is basically a file pointing to the same inode as the original file, not distinguishable from the previous file. To remove a hard-linked file, all the references to the file must be removed. A symbolic link contains a text specifying a path to the file. Unlike the symlink, creating a hard link has limitations: it is possible to hard-link only a file from the same partition (due to the nature of the link) and hard-linking directories is not allowed (to prevent infinite subdirectory loops). A device-special file is only a pointer to the device driver.
 
-While these features are common for all Unix filesystems, now we shall list some abilities specifical for Ext2. Using the file attributes, the kernel behavior of creating new files in a directory can be modified, specifically the new file user id and group id. The logical block sizes can be specified when the filesystem is created -- larger block sizes lead to efficient behavior, but also wastes more space.
+While these features are common for all Unix filesystems, now we shall list some abilities specifical for Ext2. Using the file attributes, the kernel behavior of creating new files in a directory can be modified, specifically the new file user id and group id. The logical block sizes can be specified when the filesystem is created -- larger block sizes lead to efficient behavior, but also waste more space.
 
 The symbolic links of Ext2 can use more efficient way of storing the path inside the inode of the symlink. The overall status of the filesystem is saved in the superblock. During the mounting of the filesystem, if it is detected that it was not unmounted properly, the filesystem is automatically checked. After a certain number of mounts or when a certain time period has passed, the filesystem checking is enforced.
 
@@ -72,13 +72,13 @@ As the main optimization, Ext2 performs block readahead, that means, reads more 
 
 \subsection{The Ext3 filesystem}
 
-After the initial period of bugs elimination, the Ext2 filesystem has become a safe, stable choice for a Linux-based operating system. One of the main drawbacks of using Ext2 is the lack of jounrnaling, which slows down the filesystem check and makes files prone to corruption.
+After the initial period of bugs elimination, the Ext2 filesystem became a safe, stable choice for a Linux-based operating system. One of the main drawbacks of using Ext2 is the lack of jounrnaling, which slows down the filesystem check and makes files prone to corruption.
 
 First suggestions for the journaling of ext filesystem family were put down by Stephen C.\ Tweedie \cite{extjournal}. He identifies several aspects of filesystem reliability and puts forward {\it preservation} (``stable'' data on the disk should never be damaged), {\it predictability} (the failure modes of the filesystem should be predictable and deterministic) and {\it atomicity} (every operation is either fully performed or fully undone). The Ext2 provided only the preservation aspect, whilst the failure states (could occur because of an unexpected reboot, for example) were not properly defined and might have prevented the operations from fully performing.
 
-The Tweedie's article \cite{extjournal} compares approaches of reaching the desired aspects. The easiest way is to wait for a disk write to complete before the next one is submitted, which breaks the performance. Another idea lies in preserving multiple write buffers, ordering them accordingly and write these separately. However, one can easily get into a situation when the buffer dependendence is cyclic (moving a file from directory $A$ to directory $B$ and, in the same time, moving another file from $B$ to $A$). While there exists a mechanism to solve it, all the presented approaches require the disk to be completely rescanned for errors in case of a system failure. (Recall that filesystem check slowness was one of main objections against Ext2.)
+The Tweedie's article \cite{extjournal} compares approaches of reaching the desired aspects. The easiest way is to wait for a disk write to complete before the next one is submitted, which breaks the performance. Another idea lies in preserving multiple write buffers, ordering them accordingly and write these separately. However, one can easily get into a situation when the buffer dependence is cyclic (moving a file from directory $A$ to directory $B$ and, in the same time, moving another file from $B$ to $A$). While there exists a mechanism to solve it, all the presented approaches require the disk to be completely rescanned for errors in case of a system failure. (Recall that filesystem check slowness was one of main objections against Ext2.)
 
-Instead, the author proposes to use {\it journaling}. To ensure operations to be atomic, a batch of data is written on the disk, but is not effective until a special {\it commit} block does not conclude the operation. Thus, a failure during performing the write can result only in two possibilities: either the commit block has been written on the disk, which means the transaction is complete, or it has not been written, in which case the transaction as a whole is undone. More practically: there is a dedicated place on the disk, called a {\it journal}, working as a cycling buffer. A transaction starts with a description block, continues with all the blocks that the transaction is modifying, and end with a commit block. Only after all these blocks have been successfully written to the journal, the ``real'' blocks modification is done. If a failure of the system occurs, the recovery program goes through the journal and performs all transactions which contain the commit block. If the block is not present, the transaction is discarded.
+Instead, the author proposes to use {\it journaling}. To ensure operations to be atomic, a batch of data is written on the disk, but is not effective until a special {\it commit} block does not conclude the operation. Thus, a failure during performing the write can result only in two possibilities: either the commit block has been written on the disk, which means the transaction is complete, or it has not been written, in which case the transaction as a whole is undone. More practically: there is a dedicated place on the disk, called a {\it journal}, working as a circular buffer. A transaction starts with a description block, continues with all the blocks that the transaction is modifying, and end with a commit block. Only after all these blocks have been successfully written to the journal, the ``real'' blocks modification is done. If a failure of the system occurs, the recovery program goes through the journal and performs all transactions which contain the commit block. If the block is not present, the transaction is discarded.
 
 \begin{figure}
 \centering
@@ -86,7 +86,7 @@ Instead, the author proposes to use {\it journaling}. To ensure operations to be
 	\caption{The structure of Ext3 journal \cite{takingadvantage}}
 \end{figure}
 
-The Ext3 filesystem, released in 2001, i offers three different modes of journaling: \cite{takingadvantage}
+The Ext3 filesystem, released in 2001, offers three different modes of journaling: \cite{takingadvantage}
 
 \begin{itemize}
 	\item {\it Journal} -- All data and matadata are logged. This approach minimizes the chance of losing data, but has the laregst performance penalty.
@@ -99,7 +99,7 @@ For the period of Ext3 development, a principle of both backward and forward com
 
 \subsection{The Ext4 filesystem}
 
-Although Ext3 was a step forward, it still lacked some state-of-the-art features, which could be found in other Unix filesystems. Between 2003 and 2006, numberous patches for the Ext3 were proposed to be added to the Linux kernel, but they were not accepted because the Linux community was afraid of stability of their mostly-used-filesystem at that time. As a result, Theodore Ts'o introducted plans for creating a successor of Ext3, which would partially break the forward compatibility, but still allowed an easy update from the older versions \cite{newext4}. In 2008, the code was marked as stable.
+Although Ext3 was a step forward, it still lacked some state-of-the-art features, which could be found in other Unix filesystems. Between 2003 and 2006, numerous patches for the Ext3 were proposed to be added to the Linux kernel, but they were not accepted because the Linux community was afraid of stability of their mostly-used-filesystem at that time. As a result, Theodore Ts'o introducted plans for creating a successor of Ext3, which would partially break the forward compatibility, but still allowed an easy update from the older versions \cite{newext4}. In 2008, the code was marked as stable.
 
 A large amount work was done in terms of scalability. The maximum size of the filesystem was raised to 1 EB, the maximum size of a file is raised to 2 TB. The maximum number of files is increased too.
 
@@ -113,13 +113,13 @@ A compatibility-breaking change of file block locations is brought up. Instead o
 
 The transactions in the journal are checksummed in the commit block, making two consequences: the recovery is more reliable as the corrupted transaction blocks are detected and the transaction cancelled; also now the commit block can be written in the same time as the other blocks, which significantly improves the performance.
 
-Contrary to Ext4, persistent pre-allocation of file size is possible. The checking of the filesystem is 2 to 20 times 2 to 20 times faster, as the unallocated inodes are marked and are skipped during the rest of the procedure. Instead of allocating one block at a time, the allocation is {\it delayed} in Ext4, meaning it is postponed in time and performed when the file is flushed. There is also a possibility of online defragmentation. Since the size of an inode is larger, nanosecond resolution timestamps are supported and the problem of year 2038 is deferred for 272 years.
+Contrary to Ext4, persistent pre-allocation of file size is possible. The checking of the filesystem is 2 to 20 times faster, as the unallocated inodes are marked and are skipped during the rest of the procedure. Instead of allocating one block at a time, the allocation is {\it delayed} in Ext4, meaning it is postponed in time and performed when the file is flushed. There is also a possibility of online defragmentation. Since the size of an inode is larger, nanosecond resolution timestamps are supported and the problem of year 2038 is deferred for 272 years.
 
 Similarly as in the case of Ext2 and Ext3, migrating to Ext4 is just a matter of turning on the new features. The legacy system of individual block mapping is preserved, but all new files will use extents. Downgrading from Ext4 to Ext3 by turning off the features is straightforward when extents are not used -- otherwise, temporary copy of the files is needed.
 
 \subsection{Comparison of Ext4 and other Unix filesystems}
 
-It is worth noting that Theodore Ts'o considered Ext4 not to be a major advance and still using old technology. In the light of his words, I found potentially interesting to list other popular Unix filesystems and compare their functions.
+It is worth noting that Theodore Ts'o considered Ext4 not to be a major advance and still using old technology. In the light of his words, we found potentially interesting to list other popular Unix filesystems and compare their functions.
 
 {\it Btrfs} \cite{btrfs} is a filesystem brought to life by Oracle. The development began in 2007 and the software was proclaimed to be stable in 2014. The name comes from the B-tree as this is the main structure used within the filesystem. Notable features of Btrfs are copy-on-write (a copied and unmodified file references to the ``old data''), snapshots, CRC checksums of data, RAID or configurable compression. In order to prolong the lifespan, SSD drivers are handled specifically. In-place conversion from Ext2/3/4 and ReiserFS is present.
 
@@ -142,47 +142,26 @@ The blocks between the header and the footer represent the targeted file. In som
 \item \textbf{Content based carving}
 Carving based on content structure (MBOX, HTML, XML) or linguistic analysis of the file's content. A semantic carver might conclude that some blocks of German in a middle of a long HTML file written in English is a fragment left from a previous allocated file, and not from the English HTML file. Similarly for other content characteristics like, character count, information entropy, white and black listing of data.
 \end{itemize}
-Carving can be classified as basic and advanced, with basic it is assumed that:
-\begin{itemize} 
-\item the beginning of file is not overwritten
-\item the file is not fragmented
-\item the file is not compressed
-\end{itemize}
-Advanced carving relies on internal file's structure and occurs even to fragmented files, where fragments can be:
-\begin{itemize} 
-\item not sequential
-\item out of order
-\item missing
-\end{itemize}
+Carving can be classified as basic and advanced, with basic it is assumed that the beginning of file is not overwritten, the file is not fragmented and it is not compressed. Advanced carving relies on internal file's structure and occurs even to fragmented files, where fragments can be non-nsequential, out of order or missing.
+
 Since basic carving does not consider the file's content the  attention has shifted to  advanced  carving methods. Header and footer are not enough to carve files because the file's content is not checked nor is sector within header/footer examined. Deeper knowledge of internal file's structure results in less false positives. 
 
-Authors of the paper present an advanced method that uses patteren-based file carving . It searches for metadata structures of inodes to recover their content data. This approach avoids reading the superblock and group descriptor table since its goal is to recover files from reformatted or corrupted Ext4 filesystems. The presented method can be divided into five phases\cite{dewald2017afeic}:
+Authors of the paper present an advanced method that uses pattern-based file carving. It searches for metadata structures of inodes to recover their content data. This approach avoids reading the superblock and group descriptor table since its goal is to recover files from reformatted or corrupted Ext4 filesystems. The presented method can be divided into five phases \cite{dewald2017afeic}:
 \begin{enumerate}
 \item \textbf{Initialization}
 
-The point of initialization  is to gather Ext4 parameters, they can be estimated from the filesystem size. The following parameters are of relevance:
-\begin{itemize} 
-\item Offset
-\item filesystem size
-\item Block size
-\item Inode size
-\item Inode ratio
-\item Flex group size
-\item 64 bit mode
-\item Sparce superblock
-\item Number of blocks per block group
-\item Numbers of blocks and block groups in the filesystem
-\item Number of inodes per block group
-\item Space for growing group descriptor table
-\end{itemize}
+The point of initialization  is to gather Ext4 parameters, which can be estimated from the filesystem size.
+		
+		The relevant parameters are filesystem size, block size, inode size, inode ratio, flex group size, number of blocks per block group, number of blocks and block groups in the filesystem and number of inodes per block group.
+
 \item \textbf{Inode carving}
 
 Not every 128 byte permutation forms a valid inode. For an inode to be correct, some of the values must be in certain relations. This fact is used while searching for potential inode candidates in a byte wise manner. The most significant 4 bits in the 2 byte structure of inode indicate its file type.
 
 Search patterns can also be based on timestamps, such as time interval or its inner consistency. Creation date, modification date, deletion date timestamp consistency can be verified if the following conditions are true:
 \begin{itemize}
-\item Modification date\textless creation date
-\item Deletion date=0 and (deletion date\textgreater modification date and deletion date\textgreater creation date
+\item Modification date\ \textless\ creation date
+\item Deletion date = 0 and (deletion date\ \textgreater\ modification date and deletion date\ \textgreater\ creation date
 \item Modification, creation time and delete time must be valid
 \end{itemize}
 Extent header field must contain the statisticaly defined magic number 0xf30a. Other inode attributes can be used for search patterns. All found addresses of potential inodes are sorted by file type (regular files and directories) and used for recovery.
@@ -210,46 +189,44 @@ The mapping of an address to its inode number is computed by:
 
 where:
 \begin{itemize}
-\item b block size
+\item $b$ is the block size
 
-\item $bg_a$ is block group of address a
+\item $bg_a$ is the block group of the address a
 
-\item $n_{BG}$ is number of inodes per block group
+\item $n_{BG}$ is the number of inodes per block group
 
-\item $o_s$ combined size of superblock, the group descriptor table and growth space
+\item $o_s$ combined size of the superblock, the group descriptor table and growth space
 
-\item $o_i$=2*$n_f$, offset where $n_f$ is flex group size
+\item $o_i$=2*$n_f$, the offset where $n_f$ is flex group size
 
-\item $o_r$ first 1024 bytes of the filesystem are reserved independently of block size. This offset is in case the block size is 1024 and the reserved space takes whole block, shifting all addresses by one block 
+\item $o_r$ First 1024 bytes of the filesystem are reserved independently of the block size. This offset is in case the block size is 1024 and the reserved space takes whole block, shifting all addresses by one block.
 
 \item i size of inode 
 \end{itemize}
 
-The mapping from physical addresses to inode numbers can be done using these formulas. By using information from directory trees, file names can be associated to inodes. In case of a irreparable directory, its children's file paths can not be reconstructed therefore their content is saved in files named after their inode address. All recovered files are named after their inode address and saved into a flat hierarchy.
+The mapping from physical addresses to inode numbers can be done using these formulas. By using information from directory trees, file names can be associated to inodes. In case of a irreparable directory, its children's file paths can not be reconstructed, therefore their content is saved in files named after their inode address. All recovered files are named after their inode address and saved into a flat hierarchy.
 
 
 
 \item \textbf{Regular files}
 
-Having reconstructed file path or not the content of a regular file is now recovered. Ext4 filesystem stores file content scattered across the volume in a way managed by the extents. Since the filesystem journal can contain copies of the existing inodes, duplicates with different physical addresses can be found. In order for two inodes to be the same, the file size and the extent structures are compared, due to the lack of inode numbers.
+Having reconstructed file path or not, the content of a regular file is now recovered. Ext4 filesystem stores file content scattered across the volume in a way managed by the extents. Since the filesystem journal can contain copies of the existing inodes, duplicates with different physical addresses can be found. In order for two inodes to be the same, the file size and the extent structures are compared, due to the lack of inode numbers.
+
 \item \textbf{Files without content}
 
-This is another optional phase and builds on the results of the directory tree and content data phase. The content of files found in the directory tree phase but not in the inode carving phase, cannot be recovered, but their filepath can. Therefore files are created empty with their original filename and file path.
+This is another optional phase and builds on the results of the directory tree and content data phase. The content of files found in the directory tree phase but not in the inode carving phase cannot be recovered, but their filepath can. Therefore files are created empty with their original filename and file path.
 \end{enumerate}
 
 \section{Evaluation of the method}
 
-In the previous sections, an approach for reconstructing inodes was introduced. It is based on search patterns of different inode attributes. All inodes that match the patterns are considered potential inodes. Using their extent tree, the file content can be reconstructed. In this section, we present an evaluation of the quality of each search pattern and also the completeness and correctness of presented tool. It was firstly introduced in the 2017 paper by A. Dewald and S. Seufert \cite{afeic}.
+In the previous sections, an approach for reconstructing inodes was introduced. It is based on search patterns of different inode attributes. All inodes that match the patterns are considered potential inodes. Using their extent tree, the file content can be reconstructed. In this section, we present an evaluation of the quality of each search pattern and also the completeness and correctness of presented tool. It was firstly introduced in a 2017 paper by A. Dewald and S. Seufert \cite{afeic}.
 
 \subsection{Dataset}
 
 They have built a dataset with different hard disk images to evaluate their approach and Sleuthkit implementation of the tool. They have used different filesystem sizes to cover different configurations that can occur when formatting disks of different sizes with default values. 
+
 Further, they have built test cases where they deleted specific files or changed filesystem parameters that might influence the success of the approach.
-They distinguished two for images where they have deleted files:
-\begin{itemize}
-\item files that have been deleted directly
-\item files that have been deleted by moving to the trash first.
-\end{itemize}
+They distinguished two cases for images where they have deleted files: files that have been deleted directly and files that have been deleted by moving to the trash first.
 They also made a case where they deleted all files and copied new ones on the filesystem to check if the former files can be recovered.
 Further, they compared Ext4 filesystems with enabled and
 disabled journal and deleted files. To create a more realistic
@@ -261,15 +238,15 @@ At the end, they created images where they overformatted the existing Ext4 with 
 
 \subsection{Search patterns and selectivity}
 
-In the paper, they checked, how well the different patterns perform. 
-To test this, they choose the image with installed Ubuntu and various cases. They used the Sleuthkit tool fsstat to provide a ground truth about the number of reserved inodes.
-Considering the first 10 inodes to be reserved, there remained 201.269 files, of which they checked how many are regular files and directories.
+In the paper they checked how well the different patterns perform. 
+To test this, they chose the image with installed Ubuntu and various cases. They used the Sleuthkit tool fsstat to provide a ground truth about the number of reserved inodes.
+Considering the first 10 inodes to be reserved, there remained 201.269 files of which they checked how many are regular files and directories.
 
-Each pattern was tested on each physical address and can accept or decline this address as potential inode. Accepted addresses that lie within an area of an inode table at a valid offset and can be reconstructed successfully are listed as hits in the table. This is the total number of files in the filesystem. Table misses are structures that might be a valid inode, but reside outside an inode table. Those could be false positives, but could also be copies of inodes for example in the filesystem journal. Similarly, address misses are potential inode addresses that do not lie at a 128 byte inode boundary.
+Each pattern was tested on each physical address, accepting or declining an address as a potential inode. Accepted addresses that lie within an area of an inode table at a valid offset and can be reconstructed successfully are listed as hits in the table. This is the total number of files in the filesystem. Table misses are structures that might be a valid inode, but reside outside an inode table. Those could be false positives, but could also be copies of inodes for example in the filesystem journal. Similarly, address misses are potential inode addresses that do not lie at a 128 byte inode boundary.
 
 Misses do not necessarily mean false positives, so they are not rejected at the first place. The number of accepted addresses for the pattern is the sum of t-misses and a-misses, while the selectivity of each pattern is the number compared to the total number of possible addresses.
 
-Table 1 shows the number of identified potential inodes for each pattern. 'k' stands for thousand, 'M' for million and 'G' for billion, while t-miss are table misses, a-miss are address misses. The selectivity is hits compared to all misses.
+Table 1 shows the number of identified potential inodes for each pattern. 'k' stands for a thousand, 'M' for a million and 'G' for a billion, t-miss are table misses and a-miss are address misses. The selectivity is defined as hits compared to all misses.
 
 \begin{table}
 \centering
@@ -308,7 +285,7 @@ Also, inodes of deleted files are accepted by this pattern too.
 
 \subsubsection{File type}
 
-The authors of the paper were restricted only to regular files and folders, so they adjusted the file type pattern accordingly. Besides 8.068 false positives, this pattern matches on all 142.919 inodes they searched for.
+The authors of the paper were restricted only to regular files and folders, so they adjusted the file type pattern accordingly. Besides 8.068 false positives, this pattern matches all 142.919 inodes they searched for.
 
 \subsubsection{Pattern combination}
 
@@ -358,7 +335,7 @@ Table 3 lists the number of found inodes and files from the fast overformatted f
 
 \subsection{Runtime performance}
 
-Both implemented methods show similar speed, while the contentdata mode is slightly faster. The runtime is linear in dependence from the image size. Both approaches take about 30s per GB image size.
+Both implemented methods show similar speed, while the contentdata mode is slightly faster. The runtime is linear with respect to the image size. Both approaches take about 30s per GB image size.
 
 \section{Conclusions}
 
